--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>My Portfoilo 👩🏽‍💻</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="container">
     <div id="root"></div>
+  </div>
   </body>
 </html>
